--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 title: "\"Real-Time\" Covid19 County-Level R<sub>t</sub> Dashboards"
 description: >-
-  Monitoring localized infection resurgences as distancing, testing and tracing measures evolve. (updated daily @ ~23:00 PT)
+  Monitoring localized infection resurgences as distancing, testing and tracing measures evolve. <span class='note'>(updated daily @ ~23:00 PT)</span>
 
 # Build settings
 markdown: kramdown
