--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -10,9 +10,11 @@ show_downloads: false
 covid_explorer_url: county_covid_explorer.html
 choropleth_covid_explorer_url: choropleth_covid_county_explorer.html
 needs_bokeh: true
+url: "https://speediedan.github.io/covid19"
 
 plugins:
   - jekyll-feed
+  - jekyll-sitemap
 
 
 # Exclude from processing.
