--- a/docs/Gemfile
+++ b/docs/Gemfile
@@ -1,10 +1,10 @@
 source 'https://rubygems.org'
-gem 'nokogiri'
+gem "nokogiri", ">= 1.11.4"
 gem 'rack', '~> 2.1.4'
 gem 'rspec'
 gem 'jekyll-theme-cayman'
-gem "github-pages", "~> 207", group: :jekyll_plugins
+gem "github-pages", "~> 215", group: :jekyll_plugins
 gem "activesupport", ">= 6.0.3.1"
 gem 'jekyll-sitemap'
 gem 'jekyll-redirect-from'
-gem "kramdown", ">=2.3.0"
+gem "kramdown", ">= 2.3.1"
